fix: replace Stream.toList() with Collectors.toList() — closes #2